# ----------
# configure.ac
#
#	Autoconf configuration file for PL-J 
#	(PostgreSQL call handler module)
#
#	It was rewritten from the Slony-I
#
#	Copyright (c) 2004-2005, PL-J developers
#
#	Copyright (c) 2003-2004, PostgreSQL Global Development Group
#	Author: Jan Wieck, Afilias USA INC.
#
# $Id: configure.in,v 1.2 2005-08-27 13:04:51 kocka Exp $
#
# Process this file with autoconf to produce a configure script.
# ----------

AC_INIT(pl-pgj, 0.1.1)
AM_INIT_AUTOMAKE(plpgj,0.1.1)
AC_CONFIG_HEADERS(config.h)
# AC_CONFIG_AUX_DIR(PWD)
dnl AC_CONFIG_SRCDIR([$srcdir])

AC_CANONICAL_HOST

template=
AC_MSG_CHECKING([which template to use])

case $host_os in
     aix*) template=aix ;;
    beos*) template=beos ;;
    bsdi*) template=bsdi ;;
  cygwin*) template=win ;;
  darwin*) template=darwin ;;
    dgux*) template=dgux ;;
 freebsd*) template=freebsd ;;
    hpux*) template=hpux ;;
    irix*) template=irix5 ;;
   linux*) template=linux ;;
  netbsd*) template=netbsd ;;
nextstep*) template=nextstep ;;
 openbsd*) template=openbsd ;;
     osf*) template=osf ;;
     qnx*) template=qnx4 ;;
     sco*) template=sco ;;
 solaris*) template=solaris ;;
   sunos*) template=sunos4 ;;
 sysv4.2*)
        case $host_vendor in
          univel) template=univel ;;
        esac ;;
   sysv4*) template=svr4 ;;
   sysv5*) template=unixware ;;
  ultrix*) template=ultrix4 ;;
esac

AC_MSG_RESULT([$template])
AC_SUBST(PORTNAME, $template)

# Checks for programs.
AC_PROG_CC
AC_PROG_LD
AC_PROG_LIBTOOL
AC_SUBST(LD)
AC_SUBST(with_gnu_ld)
ACX_PTHREAD()

# Locate the PostgreSQL source tree

AC_ARG_WITH(pgsourcetree, [  --with-pgsourcetree=<dir> Location of PostgreSQL source tree], AC_SUBST(PGSOURCETREE, $with_pgsourcetree))
AC_ARG_WITH(confmod, [  --with-confmod=<module> configuration module], AC_SUBST(CONFMOD, $with_confmod))
AC_ARG_WITH(channel, [  --with-channel=<module> channel module], AC_SUBST(CHANMOD, $with_channel))
AC_ARG_WITH(callmaker, [  --with-callmaker=<module> call maker module], AC_SUBST(CALLMKRMOD, $with_callmaker))

if test "x$with_pgsourcetree" = "x" ; then
	AC_MSG_ERROR([
    ********************
    * You need PostgreSQL source installed to build.
    * See howto at http://docs.codehaus.org/display/PLJ/Build+and+install+howto
    ********************
	])
fi

if test "x$with_confmod" = "x" ; then
	AC_MSG_WARN([
    using db conf module
	])
    with_confmod=db
    CONFMOD=db
fi

if test "x$with_channel" = "x" ; then
	AC_MSG_WARN([
    using febe channel module
	])
    with_chanmod=febe
    CHANMOD=febe
fi

if test "x$with_callmaker" = "x" ; then
	AC_MSG_WARN([
    using plj callmaker
	])
    with_callmaker=plj
    CALLMKRMOD=plj
fi



AC_MSG_CHECKING(PostgreSQL major version)
PG_MAJOR_VERSION=`grep "#define PACKAGE_VERSION" $with_pgsourcetree/src/include/pg_config.h | sed -e "s/#define PACKAGE_VERSION //" -e "s/\"//g"  -e "s/\([[0-9]]*\).\([0-9]*\)\(.*\)/\1/" -e "s/\.//g"`
AC_MSG_RESULT($PG_MAJOR_VERSION)
AC_SUBST(PG_MAJOR_VERSION, $PG_MAJOR_VERSION)

AC_MSG_CHECKING(PostgreSQL minor version)
PG_MINOR_VERSION=`grep "#define PACKAGE_VERSION" $with_pgsourcetree/src/include/pg_config.h | sed -e "s/#define PACKAGE_VERSION //" -e "s/\"//g"  -e "s/\([[0-9]]*\).\([0-9]*\)\(.*\)/\2/" -e "s/\.//g"`
AC_MSG_RESULT($PG_MINOR_VERSION)
AC_SUBST(PG_MINOR_VERSION, $PG_MINOR_VERSION)

AC_MSG_CHECKING(PostgreSQL release number)
PG_RELEASE_VERSION=`grep "#define PACKAGE_VERSION" $with_pgsourcetree/src/include/pg_config.h | sed -e "s/#define PACKAGE_VERSION //" -e "s/\"//g"  -e "s/\([[0-9]]*\).\([0-9]*\)\(.*\)/\3/" -e "s/\.//g"`
AC_MSG_RESULT($PG_RELEASE_VERSION)
AC_SUBST(PG_RELEASE_VERSION, $PG_RELEASE_VERSION)

AC_SUBST(PGSOURCETREE, $with_pgsourcetree)

SRCDIR=`echo $PWD`
AC_SUBST(SRCDIR, $SRCDIR)

CFLAGS="$CFLAGS -I$with_pg_sourcetree/src/include/"
#LIBS="$save_LIBS"

#AC_CONFIG_FILES([
#	Makefile.params
#])

AC_OUTPUT(Makefile)
